--- a/hw1/index.html
+++ b/hw1/index.html
@@ -9,7 +9,7 @@
 <div>
 	<h1 align="center">Моисеева Ксения Игоревна</h1>
 	<p align="center">
-		<img src="https://scontent-waw1-1.xx.fbcdn.net/hphotos-xpt1/v/t1.0-9/12814697_757321424368551_238626072396164368_n.jpg?oh=4bb947b39bbcc664a7725d7ba58b13df&oe=579644C1" height="300px" width="300px">
+		<img src="https://scontent-vie1-1.xx.fbcdn.net/v/t1.0-9/12814697_757321424368551_238626072396164368_n.jpg?oh=50f8df58e60ef8eefbc11259f36d63a5&oe=585C05C1" height="300px" width="300px">
 	</p>
 	<p>Специалист департамента автоматизации и связи</p>
 	<hr>
