--- a/hw4/index.html
+++ b/hw4/index.html
@@ -2,11 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Homework3</title>
+	<title>Asia Holidays Maldives</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <div class="homework4">
+
+<!--Header-->
+
 	<div class="logo">
 		<div class="logo1">
 			<img src="img/logo1.jpg">
@@ -19,23 +22,23 @@
 		</div>
 		<div class="contries">
 			<ul>
-				<li><img src="img/India.jpg">
-				<p><a href="">Индия</a></p>
+				<li><a href="#"><img src="img/India.jpg">
+				<p>Индия</p></a>
 				</li>
-				<li><img src="img/nepal.jpg">
-				<p><a href="">Непал</a></p>
+				<li><a href="#"><img src="img/nepal.jpg">
+				<p>Непал</p></a>
 				</li>
-				<li><img src="img/tibet.jpg">
-				<p><a href="">Тибет</a></p>
+				<li><a href="#"><img src="img/tibet.jpg">
+				<p>Тибет</p></a>
 				</li>
-				<li><img src="img/bhutan.jpg">
-				<p><a href="">Бутан</a></p>
+				<li><a href="#"><img src="img/bhutan.jpg">
+				<p>Бутан</p></a>
 				</li>
-				<li><img src="img/sri-lanka.jpg">
-				<p><a href="">Шри-Ланка</a></p>
+				<li><a href="#"><img src="img/sri-lanka.jpg">
+				<p>Шри-Ланка</p></a>
 				</li>
-				<li><img src="img/maldives.jpg">
-				<p><a href="">Мальдивы</a></p>
+				<li><a href="#"><img src="img/maldives.jpg">
+				<p>Мальдивы</p></a>
 				</li>
 			</ul>
 		</div>
@@ -43,64 +46,66 @@
 	<div class="photo">
 		<img src="img/photo.jpg">
 	</div>
-	<div class="header">
-		<ul>
-			<li><a href="">Главная</a></li>
-			<li><a href="">Путешествие</a></li>
-				<ul>
-					<li>Путешествие 1</li>
-					<li>Путешествие 2</li>
-					<li>Путешествие 3</li>
-					<li>Путешествие 4</li>
-					<li>Путешествие 5</li>
-				</ul>
-			<li><a href="">Услуги</a></li>
-			<li><a href="">Партнерам</a></li>
-			<li><a href="">Отзывы клиентов</a></li>
-			<li><a href="">О нас</a></li>
-			<li><a href="">Контакты</a></li>
-		</ul>
-	</div>
+
+<!--Menu-->
+
+	<ul class="menu">
+      	<li><a href="#">Главная</a></li>
+
+      	<li><a href="#">Путешествие  <span>&#9660</span></a>
+        	<ul class="submenu">
+          		<li><a href="#">Путешествие 1</a></li>
+          		<li><a href="#">Путешествие 2</a></li>
+          		<li><a href="#">Путешествие 3</a></li>
+          		<li><a href="#">Путешествие 4</a></li>
+          		<li><a href="#">Путешествие 5</a></li>
+        	</ul>
+      	</li>
+
+      	<li><a href="#">Услуги  <span>&#9660</span></a>
+        	<ul class="submenu">
+          		<li><a href="#">Услуга 1</a></li>
+          		<li><a href="#">Услуга 2</a></li>
+          		<li><a href="#">Услуга 3</a></li>
+          		<li><a href="#">Услуга 4</a></li>
+          		<li><a href="#">Услуга 5</a></li>
+        	</ul>
+      	</li>
+      	<li><a href="#">Партнеры <span> &#9660</span></a>
+       		<ul class="submenu">
+          		<li><a href="#">Партнеры 1</a></li>
+          		<li><a href="#">Партнеры 2</a></li>
+          		<li><a href="#">Партнеры 3</a></li>
+          		<li><a href="#">Партнеры 4</a></li>
+          		<li><a href="#">Партнеры 5</a></li>
+        	</ul>
+      	</li>
+      	<li><a href="#">Отзывы клиентов</a></li>
+      	<li><a href="#">О нас</a></li>
+      	<li><a href="#">Контакты</a></li>
+    </ul>
+
+ <!--Content-->
+
 	<div class="content">
 		<div class="column1">
-			<h1>Информация</h1>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
+			<h3>Информация</h3>
+			<p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
 		</div>
 		<div class="column2">
-			
 		</div>
 		<div class="column3">
-			<h1>Новости</h1>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
-			<p>Lorem ipsum dolor sit amet</p>
+			<h3>Новости</h3>
+			<p>Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</p>
 		</div>
 	</div>
 </div>
+
+<!--Footer-->
+
+<div class="footer">
+	<p >Copyright &copy asia-holidays.com. 2010</p>
+</div>
+
 </body>
 </html>
