--- a/hw5/part1/index.html
+++ b/hw5/part1/index.html
@@ -15,13 +15,11 @@
     <!--Верхнее меню-->
     <ul class="menu">
       <li class="act"><a href="#">Ola! <span>Entrar</span> ou <span>Cadastre-se</span></a></li>
-
-
       <li class="flag"><a href="#"><span><i class="fa fa-flag"></i> Minhas Ofertas</span></a></li>
       <li><a href="#">Ajuda</a></li>
       <li><a href="#">Contato</a></li>
       <li><a href="#">Forum</a></li>
-      <li class="act"><a href="#">Vender</a></li>
+      <li><a href="#">Vender</a></li>
       <li><a href="#">Meu YouBike</a></li>
     </ul>
   </header>
