--- a/hw5/part2/index.html
+++ b/hw5/part2/index.html
@@ -3,51 +3,49 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Picture</title>
 </head>
 
 <body>
-  <table>
-
-  		<tr>
-  			<td colspan="2"></td>
-  			<td colspan="2"></td>
-  			<td style="background:yellow" colspan="2"></td>
-  		</tr>
-  		<tr>
-  			<td rowspan="2"></td>
-  			<td style="background:red" colspan="3" rowspan="4"></td>
-  			<td style="background:yellow" colspan="2" rowspan="2"></td>
-  		</tr>
-  		<tr></tr>
-  		<tr>
-  			<td rowspan="3"></td>
-  			<td rowspan="2"></td>
-  			<td rowspan="2"></td>
-  		</tr>
-  		<tr></tr>
-  		<tr>
-  			<td style="background:black"></td>
-  			<td style="background:black"></td>
-  			<td></td>
-  			<td colspan="2"></td>
-  		</tr>
-  		<tr>
-  			<td style="background:yellow" rowspan="3"></td>
-  			<td style="background:black"></td>
-  			<td style="background:black"></td>
-  			<td></td>
-  			<td style="background:blue" colspan="2" rowspan="2"></td>
-  		</tr>
-  		<tr>
-  			<td colspan="2" rowspan="2"></td>
-  			<td style="background:black"></td>
-  		</tr>
-  		<tr>
-  			<td colspan="3"></td>
-  		</tr>
-  	</table>
+  <table cellspacing="0">
+    <tr>
+      <td colspan="2"></td>
+      <td colspan="2"></td>
+      <td colspan="2" bgcolor="yellow"></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td colspan="3" rowspan="2" bgcolor="red" height="98px"></td>
+      <td colspan="2" bgcolor="yellow"></td>
+    </tr>
+    <tr>
+      <td rowspan="2"></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td bgcolor="grey"></td>
+      <td bgcolor="grey"></td>
+      <td width="30px"></td>
+      <td colspan="2"></td>
+    </tr>
+     <tr>
+      <td class="bottom" rowspan="3" bgcolor="yellow"></td>
+      <td bgcolor="grey"></td>
+      <td bgcolor="grey"></td>
+      <td></td>
+      <td colspan="2" rowspan="2" bgcolor="blue"></td>
+    </tr>
+    <tr>
+      <td class="bottom" colspan="2" rowspan="2"></td>
+      <td bgcolor="grey"></td>
+    </tr>
+    <tr>
+      <td class="bottom" colspan="3"></td>
+    </tr>
+    
+  </table>
 
 
 </body>
